@@ -154,3 +154,7 @@ Version 0.0.1:
 153/ Made projectile critical always crit system more aligned with the mod current always crit system.
 154/ Added in "Lower visual quality" config for player that reach toward endgame.
 155/ Made Shattered Sky not affected by attack speed
+156/ Finish Unforgiving in code.
+157/ Implemented outro attack function for synergy mod item.
+158/ Added in "CustomDataValue" for projectile which basically act like ai[3].
+159/ Added in a weapon guide value and make it functional.
